--- a/minestone-due/index.html
+++ b/minestone-due/index.html
@@ -5,17 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">   <!--Bootstrap.css--> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">      <!--Bootstrap ICONS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <!--Font AWESOME ICONS-->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>   <!--vue-->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> <!--axios-->
-
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>dischi-app</title>
 </head>
 <body>
     <div id="root">
-        {{show()}}
+        <div class="container-fluid">
+            <div class="row mt_tall_r">
+                <div class="col-12">
+                    <img class="logo_wdt" src="logo.png" alt="">
+                </div>
+            </div>
+        </div>
+    <div class="container">
+        <div class="row d-flex flex-wrap justify-content-center my_ro_marg" >
+            <div class="my_width_card text-center m-3" v-for="(elem,index) in nuovoA" :key="index">
+                <img class="my_post mt-1" :src="elem.poster" alt="">
+                <div class="title_post mt-4 mb-3">{{elem.title}}</div>
+                <div class="grey_style mb-2">{{elem.author}}</div>
+                <div class="grey_style">{{elem.year}}</div>
+                
+            </div>
+        </div>
+    </div>      
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>   
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
 </body>
