--- a/minestone-due/index.html
+++ b/minestone-due/index.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="row mt_tall_r">
                 <div class="col-12">
-                    <img class="logo_wdt" src="logo.png" alt="">
+                    <img class="logo_wdt" src="./logo.png.png" alt="">
                 </div>
             </div>
         </div>
